--- a/man/anamnesis.1
+++ b/man/anamnesis.1
@@ -50,6 +50,10 @@ restarts anamnesis daemon
 opens anamnesis browser with clipboard history
 
 .TP
+.B --cleanup
+performs a cleanup on the clipboard database
+
+.TP
 .B -l N, --list=N       
 prints the clipboard history last N values
 
