--- a/man/anamnesis.1
+++ b/man/anamnesis.1
@@ -97,11 +97,9 @@ print only a brief version of long clipboard elements
 
 .SH DEPENDENCIES
 
-* gtk
-* python
-* pygtk
-* sqlite
-
+* python-xdg
+* python-gtk2
+* sqlite3
 
 .SH AUTHOR
 
